--- a/index.html
+++ b/index.html
@@ -1,2 +1,150 @@
-This is a place-holder...
+<!DOCTYPE html>
+<html>
+<head>
+  <meta http-equiv='content-type' value='text/html;charset=utf8'>
+  <meta name='generator' value='Ronn/v0.7.3 (http://github.com/rtomayko/ronn/tree/0.7.3)'>
+  <title>jamtur01(7) - Puppet, Security, Ruby, Operations, DevOps</title>
+  <style type='text/css' media='all'>
+  /* style: man */
+  body#manpage {margin:0}
+  .mp {max-width:100ex;padding:0 9ex 1ex 4ex}
+  .mp p,.mp pre,.mp ul,.mp ol,.mp dl {margin:0 0 20px 0}
+  .mp h2 {margin:10px 0 0 0}
+  .mp > p,.mp > pre,.mp > ul,.mp > ol,.mp > dl {margin-left:8ex}
+  .mp h3 {margin:0 0 0 4ex}
+  .mp dt {margin:0;clear:left}
+  .mp dd {margin:0 0 0 9ex}
+  .mp h1,.mp h2,.mp h3,.mp h4 {clear:left}
+  .mp pre {margin-bottom:20px}
+  .mp pre+h2,.mp pre+h3 {margin-top:22px}
+  .mp h2+pre,.mp h3+pre {margin-top:5px}
+  .mp img {display:block;margin:auto}
+  .mp h1.man-title {display:none}
+  .mp,.mp code,.mp pre,.mp tt,.mp kbd,.mp samp,.mp h3,.mp h4 {font-family:monospace;font-size:14px;line-height:1.42857142857143}
+  .mp h2 {font-size:16px;line-height:1.25}
+  .mp h1 {font-size:20px;line-height:2}
+  .mp {text-align:justify;background:#fff}
+  .mp,.mp code,.mp pre,.mp pre code,.mp tt,.mp kbd,.mp samp {color:#131211}
+  .mp h1,.mp h2,.mp h3,.mp h4 {color:#030201}
+  .mp u {text-decoration:underline}
+  .mp code,.mp strong,.mp b {font-weight:bold;color:#131211}
+  .mp em,.mp var {font-style:italic;color:#232221;text-decoration:none}
+  .mp a,.mp a:link,.mp a:hover,.mp a code,.mp a pre,.mp a tt,.mp a kbd,.mp a samp {color:#0000ff}
+  .mp b.man-ref {font-weight:normal;color:#434241}
+  .mp pre {padding:0 4ex}
+  .mp pre code {font-weight:normal;color:#434241}
+  .mp h2+pre,h3+pre {padding-left:0}
+  ol.man-decor,ol.man-decor li {margin:3px 0 10px 0;padding:0;float:left;width:33%;list-style-type:none;text-transform:uppercase;color:#999;letter-spacing:1px}
+  ol.man-decor {width:100%}
+  ol.man-decor li.tl {text-align:left}
+  ol.man-decor li.tc {text-align:center;letter-spacing:4px}
+  ol.man-decor li.tr {text-align:right;float:right}
+  </style>
+</head>
+<!--
+  The following styles are deprecated and will be removed at some point:
+  div#man, div#man ol.man, div#man ol.head, div#man ol.man.
 
+  The .man-page, .man-decor, .man-head, .man-foot, .man-title, and
+  .man-navigation should be used instead.
+-->
+<body id='manpage'>
+  <div class='mp' id='man'>
+
+  <div class='man-navigation' style='display:none'>
+    <a href="#NAME">NAME</a>
+    <a href="#SYNOPSIS">SYNOPSIS</a>
+    <a href="#OPTIONS">OPTIONS</a>
+    <a href="#STANDARDS">STANDARDS</a>
+    <a href="#HISTORY">HISTORY</a>
+    <a href="#SEE-ALSO">SEE ALSO</a>
+    </div>
+
+  <ol class='man-decor man-head man head'>
+    <li class='tl'>jamtur01(7)</li>
+    <li class='tc'></li>
+    <li class='tr'>jamtur01(7)</li>
+  </ol>
+
+  <h2 id="NAME">NAME</h2>
+<p class="man-name">
+  <code>jamtur01</code> - <span class="man-whatis">Puppet, Security, Ruby, Operations, DevOps</span>
+</p>
+
+<p>James Turnbull
+<a href="&#109;&#97;&#x69;&#x6c;&#116;&#111;&#58;&#106;&#x61;&#x6d;&#101;&#115;&#x40;&#x6c;&#x6f;&#x76;&#101;&#x64;&#x74;&#104;&#97;&#x6e;&#108;&#111;&#x73;&#x74;&#x2e;&#x6e;&#x65;&#x74;" data-bare-link="true">&#x6a;&#x61;&#109;&#101;&#x73;&#64;&#108;&#x6f;&#118;&#x65;&#100;&#x74;&#x68;&#97;&#110;&#108;&#x6f;&#115;&#x74;&#x2e;&#x6e;&#101;&#116;</a>
+503-734-8571
+430 SW 13th St.
+Apt #1009
+Portland, OR 97209</p>
+
+<h2 id="SYNOPSIS">SYNOPSIS</h2>
+
+<p>James is an experienced Operations and Security guy with over twenty years
+of experience in startups, banking, finance, pharmaceutical, telecommunications
+and outsourcing.</p>
+
+<p>He has managed operations and security teams, worked as an architect on large scale
+infrastructure projects ($20M+), developed a number of open source projects and has
+an abiding interest in metrics and measurement.</p>
+
+<h2 id="OPTIONS">OPTIONS</h2>
+
+<dl>
+<dt>--operations</dt><dd><p>Operations, Devops, Puppet, management, metrics, cultural change</p></dd>
+<dt>--security</dt><dd><p>Infrastructure, eFraud, Security Operations, Risk, Program Management</p></dd>
+<dt class="flush">--ruby</dt><dd><p>MRI, Sinatra, Rbot, Redmine, general hackery</p></dd>
+<dt>--platforms</dt><dd><p>Linux, BSD, Solaris, Cisco, Checkpoint, Windows.</p></dd>
+<dt class="flush">--other</dt><dd><p>Author of five published books, interests in wine, food, books and photography</p></dd>
+</dl>
+
+
+<h2 id="STANDARDS">STANDARDS</h2>
+
+<ul>
+<li><p>Leadership &amp; Management
+Strong leadership and management skills.</p></li>
+<li><p>Communication:
+Excellent written and verbal communication skills.</p></li>
+<li><p>Business Development
+Solid track record growing teams and organisations.</p></li>
+</ul>
+
+
+<h2 id="HISTORY">HISTORY</h2>
+
+<dl>
+<dt>Puppet Labs (2010 to -, Full Time):</dt><dd><p></p>
+
+<p>Runs Operations and Professional Services.</p>
+
+<p>Contact: Luke Kanies, <a href="&#x6d;&#97;&#x69;&#108;&#x74;&#111;&#x3a;&#108;&#x75;&#x6b;&#101;&#64;&#112;&#117;&#112;&#x70;&#x65;&#116;&#108;&#97;&#x62;&#115;&#46;&#99;&#x6f;&#x6d;" data-bare-link="true">&#x6c;&#117;&#107;&#x65;&#64;&#x70;&#x75;&#x70;&#x70;&#101;&#x74;&#x6c;&#x61;&#x62;&#115;&#x2e;&#x63;&#111;&#109;</a>
+<a href="http://www.puppetlabs.com" data-bare-link="true">http://www.puppetlabs.com</a></p></dd>
+<dt>National Australia Bank (2006 to 2010, Full Time):</dt><dd><p></p>
+
+<p>Manager of NABCERT</p>
+
+<p>Managed CERT team including eFraud, Penetration testing, Vulnerability Management,
+Security Monitoring &amp; Metrics, Investigations, and Security Research.</p>
+
+<p><a href="http://www.nab.com.au" data-bare-link="true">http://www.nab.com.au</a></p></dd>
+</dl>
+
+
+<p><em>Further references available upon request</em></p>
+
+<h2 id="SEE-ALSO">SEE ALSO</h2>
+
+<p><a href="http://github.com/jamur01">GitHub</a><br />
+<a href="http://www.kartar.net">Blog</a></p>
+
+
+  <ol class='man-decor man-foot man foot'>
+    <li class='tl'></li>
+    <li class='tc'>January 2011</li>
+    <li class='tr'>jamtur01(7)</li>
+  </ol>
+
+  </div>
+</body>
+</html>
