--- a/index.html
+++ b/index.html
@@ -71,11 +71,13 @@
   <code>jamtur01</code> - <span class="man-whatis">Puppet, Security, Ruby, Operations, DevOps</span>
 </p>
 
-<p>James Turnbull
-<a href="&#109;&#97;&#x69;&#x6c;&#116;&#111;&#58;&#106;&#x61;&#x6d;&#101;&#115;&#x40;&#x6c;&#x6f;&#x76;&#101;&#x64;&#x74;&#104;&#97;&#x6e;&#108;&#111;&#x73;&#x74;&#x2e;&#x6e;&#x65;&#x74;" data-bare-link="true">&#x6a;&#x61;&#109;&#101;&#x73;&#64;&#108;&#x6f;&#118;&#x65;&#100;&#x74;&#x68;&#97;&#110;&#108;&#x6f;&#115;&#x74;&#x2e;&#x6e;&#101;&#116;</a>
-503-734-8571
-430 SW 13th St.
-Apt #1009
+<p>James Turnbull</p>
+
+<p><a href="&#x6d;&#x61;&#105;&#x6c;&#x74;&#x6f;&#58;&#x6a;&#x61;&#109;&#x65;&#115;&#x40;&#x6c;&#111;&#x76;&#101;&#100;&#x74;&#x68;&#97;&#x6e;&#x6c;&#111;&#x73;&#116;&#46;&#x6e;&#101;&#116;" data-bare-link="true">&#106;&#x61;&#109;&#101;&#x73;&#x40;&#x6c;&#x6f;&#x76;&#x65;&#x64;&#116;&#x68;&#x61;&#x6e;&#x6c;&#111;&#x73;&#116;&#x2e;&#110;&#101;&#116;</a><br />
+503-734-8571</p>
+
+<p>430 SW 13th St.<br />
+Apt #1009<br />
 Portland, OR 97209</p>
 
 <h2 id="SYNOPSIS">SYNOPSIS</h2>
@@ -118,7 +120,7 @@ Solid track record growing teams and organisations.</p></li>
 
 <p>Runs Operations and Professional Services.</p>
 
-<p>Contact: Luke Kanies, <a href="&#x6d;&#97;&#x69;&#108;&#x74;&#111;&#x3a;&#108;&#x75;&#x6b;&#101;&#64;&#112;&#117;&#112;&#x70;&#x65;&#116;&#108;&#97;&#x62;&#115;&#46;&#99;&#x6f;&#x6d;" data-bare-link="true">&#x6c;&#117;&#107;&#x65;&#64;&#x70;&#x75;&#x70;&#x70;&#101;&#x74;&#x6c;&#x61;&#x62;&#115;&#x2e;&#x63;&#111;&#109;</a>
+<p>Contact: Luke Kanies, <a href="&#109;&#97;&#x69;&#108;&#x74;&#x6f;&#58;&#x6c;&#x75;&#107;&#x65;&#64;&#x70;&#x75;&#x70;&#112;&#101;&#116;&#108;&#97;&#98;&#x73;&#x2e;&#x63;&#x6f;&#x6d;" data-bare-link="true">&#x6c;&#117;&#x6b;&#101;&#x40;&#x70;&#117;&#112;&#112;&#x65;&#x74;&#108;&#x61;&#x62;&#115;&#46;&#x63;&#x6f;&#x6d;</a>
 <a href="http://www.puppetlabs.com" data-bare-link="true">http://www.puppetlabs.com</a></p></dd>
 <dt>National Australia Bank (2006 to 2010, Full Time):</dt><dd><p></p>
 
