--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ Solid track record growing teams and organisations.</p></li>
 
 <p>Runs Operations and Professional Services.</p>
 
-<p>Contact: Luke Kanies, <a href="&#109;&#97;&#x69;&#108;&#x74;&#x6f;&#58;&#x6c;&#x75;&#107;&#x65;&#64;&#x70;&#x75;&#x70;&#112;&#101;&#116;&#108;&#97;&#98;&#x73;&#x2e;&#x63;&#x6f;&#x6d;" data-bare-link="true">&#x6c;&#117;&#x6b;&#101;&#x40;&#x70;&#117;&#112;&#112;&#x65;&#x74;&#108;&#x61;&#x62;&#115;&#46;&#x63;&#x6f;&#x6d;</a>
+<p>Contact: Luke Kanies, <a href="&#109;&#97;&#x69;&#108;&#x74;&#x6f;&#58;&#x6c;&#x75;&#107;&#x65;&#64;&#x70;&#x75;&#x70;&#112;&#101;&#116;&#108;&#97;&#98;&#x73;&#x2e;&#x63;&#x6f;&#x6d;" data-bare-link="true">&#x6c;&#117;&#x6b;&#101;&#x40;&#x70;&#117;&#112;&#112;&#x65;&#x74;&#108;&#x61;&#x62;&#115;&#46;&#x63;&#x6f;&#x6d;</a><br />
 <a href="http://www.puppetlabs.com" data-bare-link="true">http://www.puppetlabs.com</a></p></dd>
 <dt>National Australia Bank (2006 to 2010, Full Time):</dt><dd><p></p>
 
