More style fixes

--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@ an abiding interest in metrics and measurement.</p>
 <h2 id="STANDARDS">STANDARDS</h2>
 
 <ul>
-<li><p>Leadership &amp; Management
+<li><p>Leadership &amp; Management:<br />
 Strong leadership and management skills.</p></li>
-<li><p>Communication:
+<li><p>Communication:<br />
 Excellent written and verbal communication skills.</p></li>
-<li><p>Business Development
+<li><p>Business Development:<br />
 Solid track record growing teams and organisations.</p></li>
 </ul>
 
