--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv='content-type' value='text/html;charset=utf8'>
   <meta name='generator' value='Ronn/v0.7.3 (http://github.com/rtomayko/ronn/tree/0.7.3)'>
-  <title>jamtur01(7) - Puppet, Security, Ruby, Operations, DevOps</title>
+  <title>jamtur01(7) - Operations, Puppet, Security, Ruby, DevOps</title>
   <style type='text/css' media='all'>
   /* style: man */
   body#manpage {margin:0}
@@ -68,22 +68,22 @@
 
   <h2 id="NAME">NAME</h2>
 <p class="man-name">
-  <code>jamtur01</code> - <span class="man-whatis">Puppet, Security, Ruby, Operations, DevOps</span>
+  <code>jamtur01</code> - <span class="man-whatis">Operations, Puppet, Security, Ruby, DevOps</span>
 </p>
 
 <p>James Turnbull</p>
 
-<p><a href="&#x6d;&#x61;&#105;&#x6c;&#x74;&#x6f;&#58;&#x6a;&#x61;&#109;&#x65;&#115;&#x40;&#x6c;&#111;&#x76;&#101;&#100;&#x74;&#x68;&#97;&#x6e;&#x6c;&#111;&#x73;&#116;&#46;&#x6e;&#101;&#116;" data-bare-link="true">&#106;&#x61;&#109;&#101;&#x73;&#x40;&#x6c;&#x6f;&#x76;&#x65;&#x64;&#116;&#x68;&#x61;&#x6e;&#x6c;&#111;&#x73;&#116;&#x2e;&#110;&#101;&#116;</a><br />
+<p><a href="&#109;&#x61;&#x69;&#x6c;&#x74;&#x6f;&#58;&#106;&#x61;&#x6d;&#101;&#115;&#64;&#x6c;&#111;&#x76;&#x65;&#x64;&#x74;&#104;&#x61;&#110;&#108;&#x6f;&#x73;&#116;&#46;&#110;&#x65;&#x74;" data-bare-link="true">&#x6a;&#x61;&#109;&#101;&#x73;&#64;&#x6c;&#x6f;&#118;&#101;&#x64;&#116;&#x68;&#x61;&#x6e;&#x6c;&#x6f;&#115;&#x74;&#46;&#x6e;&#101;&#116;</a>
 503-734-8571</p>
 
-<p>430 SW 13th St.<br />
-Apt #1009<br />
+<p>430 SW 13th St.
+Apt #1009
 Portland, OR 97209</p>
 
 <h2 id="SYNOPSIS">SYNOPSIS</h2>
 
-<p>James is an experienced Operations and Security guy with over twenty years
-of experience in startups, banking, finance, pharmaceutical, telecommunications
+<p>James is an experienced Operations and Security professional with over twenty years
+of experience in startups, banking &amp; finance, pharmaceutical, telecommunications
 and outsourcing.</p>
 
 <p>He has managed operations and security teams, worked as an architect on large scale
@@ -93,40 +93,37 @@ an abiding interest in metrics and measurement.</p>
 <h2 id="OPTIONS">OPTIONS</h2>
 
 <dl>
-<dt>--operations</dt><dd><p>Operations, Devops, Puppet, management, metrics, cultural change</p></dd>
-<dt>--security</dt><dd><p>Infrastructure, eFraud, Security Operations, Risk, Program Management</p></dd>
+<dt>--operations</dt><dd><p>Devops, Puppet, Operations Architecture, Service Management, metrics, cultural change</p></dd>
+<dt>--security</dt><dd><p>Infrastructure, eFraud, Security Operations, Security Education, Risk, Program Management</p></dd>
 <dt class="flush">--ruby</dt><dd><p>MRI, Sinatra, Rbot, Redmine, general hackery</p></dd>
-<dt>--platforms</dt><dd><p>Linux, BSD, Solaris, Cisco, Checkpoint, Windows.</p></dd>
+<dt>--platforms</dt><dd><p>Linux, BSD/OSX, Solaris, AS/400, Cisco, Checkpoint, Windows.</p></dd>
 <dt class="flush">--other</dt><dd><p>Author of five published books, interests in wine, food, books and photography</p></dd>
 </dl>
 
 
 <h2 id="STANDARDS">STANDARDS</h2>
 
-<ul>
-<li><p>Leadership &amp; Management:<br />
-Strong leadership and management skills.</p></li>
-<li><p>Communication:<br />
-Excellent written and verbal communication skills.</p></li>
-<li><p>Business Development:<br />
-Solid track record growing teams and organisations.</p></li>
-</ul>
+<dl>
+<dt>Leadership &amp; Management</dt><dd><p>Lead small and large teams including technical and operational leadership roles</p></dd>
+<dt>Communication</dt><dd><p>Excellent written and verbal communication skills.</p></dd>
+<dt>Business Development</dt><dd><p>Good track record of growing teams, sales, service levels, products and organisations.</p></dd>
+</dl>
 
 
 <h2 id="HISTORY">HISTORY</h2>
 
 <dl>
-<dt>Puppet Labs (2010 to -, Full Time):</dt><dd><p></p>
+<dt>Puppet Labs (2010 to now):</dt><dd><p></p>
 
 <p>Runs Operations and Professional Services.</p>
 
-<p>Contact: Luke Kanies, <a href="&#109;&#97;&#x69;&#108;&#x74;&#x6f;&#58;&#x6c;&#x75;&#107;&#x65;&#64;&#x70;&#x75;&#x70;&#112;&#101;&#116;&#108;&#97;&#98;&#x73;&#x2e;&#x63;&#x6f;&#x6d;" data-bare-link="true">&#x6c;&#117;&#x6b;&#101;&#x40;&#x70;&#117;&#112;&#112;&#x65;&#x74;&#108;&#x61;&#x62;&#115;&#46;&#x63;&#x6f;&#x6d;</a><br />
+<p>Contact: Luke Kanies, <a href="&#x6d;&#x61;&#x69;&#108;&#x74;&#111;&#x3a;&#108;&#x75;&#x6b;&#x65;&#x40;&#112;&#x75;&#112;&#x70;&#x65;&#116;&#108;&#x61;&#x62;&#115;&#46;&#x63;&#x6f;&#x6d;" data-bare-link="true">&#108;&#x75;&#107;&#101;&#64;&#x70;&#x75;&#x70;&#x70;&#101;&#x74;&#x6c;&#97;&#98;&#115;&#x2e;&#x63;&#111;&#109;</a>
 <a href="http://www.puppetlabs.com" data-bare-link="true">http://www.puppetlabs.com</a></p></dd>
-<dt>National Australia Bank (2006 to 2010, Full Time):</dt><dd><p></p>
+<dt>National Australia Bank (2006 to 2010):</dt><dd><p></p>
 
-<p>Manager of NABCERT</p>
+<p>Manager of nabCERT</p>
 
-<p>Managed CERT team including eFraud, Penetration testing, Vulnerability Management,
+<p>Managed CERT team including eFraud, Penetration Testing, Vulnerability Management,
 Security Monitoring &amp; Metrics, Investigations, and Security Research.</p>
 
 <p><a href="http://www.nab.com.au" data-bare-link="true">http://www.nab.com.au</a></p></dd>
