--- a/index.html
+++ b/index.html
@@ -73,12 +73,16 @@
 
 <p>James Turnbull</p>
 
-<p><a href="&#109;&#x61;&#x69;&#x6c;&#x74;&#x6f;&#58;&#106;&#x61;&#x6d;&#101;&#115;&#64;&#x6c;&#111;&#x76;&#x65;&#x64;&#x74;&#104;&#x61;&#110;&#108;&#x6f;&#x73;&#116;&#46;&#110;&#x65;&#x74;" data-bare-link="true">&#x6a;&#x61;&#109;&#101;&#x73;&#64;&#x6c;&#x6f;&#118;&#101;&#x64;&#116;&#x68;&#x61;&#x6e;&#x6c;&#x6f;&#115;&#x74;&#46;&#x6e;&#101;&#116;</a>
-503-734-8571</p>
+<p><a href="&#109;&#97;&#x69;&#108;&#116;&#x6f;&#58;&#x6a;&#97;&#x6d;&#101;&#115;&#x40;&#108;&#x6f;&#118;&#x65;&#x64;&#116;&#x68;&#x61;&#x6e;&#x6c;&#111;&#115;&#116;&#46;&#110;&#x65;&#x74;" data-bare-link="true">&#x6a;&#x61;&#109;&#x65;&#115;&#64;&#108;&#111;&#118;&#101;&#x64;&#116;&#104;&#x61;&#110;&#108;&#x6f;&#x73;&#x74;&#46;&#110;&#101;&#x74;</a></p>
 
-<p>430 SW 13th St.
-Apt #1009
-Portland, OR 97209</p>
+<p>Phone: 1-503-734-8571</p>
+
+<p>Address:</p>
+
+<pre><code>     430 SW 13th Street 
+     Apt #1009
+     Portland, OR 97209  
+</code></pre>
 
 <h2 id="SYNOPSIS">SYNOPSIS</h2>
 
@@ -117,7 +121,7 @@ an abiding interest in metrics and measurement.</p>
 
 <p>Runs Operations and Professional Services.</p>
 
-<p>Contact: Luke Kanies, <a href="&#x6d;&#x61;&#x69;&#108;&#x74;&#111;&#x3a;&#108;&#x75;&#x6b;&#x65;&#x40;&#112;&#x75;&#112;&#x70;&#x65;&#116;&#108;&#x61;&#x62;&#115;&#46;&#x63;&#x6f;&#x6d;" data-bare-link="true">&#108;&#x75;&#107;&#101;&#64;&#x70;&#x75;&#x70;&#x70;&#101;&#x74;&#x6c;&#97;&#98;&#115;&#x2e;&#x63;&#111;&#109;</a>
+<p>Contact: Luke Kanies, <a href="&#109;&#97;&#x69;&#108;&#116;&#x6f;&#58;&#108;&#x75;&#x6b;&#101;&#64;&#x70;&#117;&#112;&#112;&#101;&#116;&#x6c;&#97;&#98;&#115;&#46;&#99;&#111;&#x6d;" data-bare-link="true">&#108;&#117;&#107;&#101;&#x40;&#112;&#x75;&#112;&#112;&#x65;&#116;&#108;&#x61;&#x62;&#115;&#x2e;&#x63;&#x6f;&#109;</a>
 <a href="http://www.puppetlabs.com" data-bare-link="true">http://www.puppetlabs.com</a></p></dd>
 <dt>National Australia Bank (2006 to 2010):</dt><dd><p></p>
 
