Made some changes to my resume, init

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <a href="#STANDARDS">STANDARDS</a>
     <a href="#HISTORY">HISTORY</a>
     <a href="#SEE-ALSO">SEE ALSO</a>
-    </div>
+  </div>
 
   <ol class='man-decor man-head man head'>
     <li class='tl'>jamtur01(7)</li>
@@ -73,15 +73,13 @@
 
 <p>James Turnbull</p>
 
-<p><a href="&#109;&#97;&#x69;&#108;&#116;&#x6f;&#58;&#x6a;&#97;&#x6d;&#101;&#115;&#x40;&#108;&#x6f;&#118;&#x65;&#x64;&#116;&#x68;&#x61;&#x6e;&#x6c;&#111;&#115;&#116;&#46;&#110;&#x65;&#x74;" data-bare-link="true">&#x6a;&#x61;&#109;&#x65;&#115;&#64;&#108;&#111;&#118;&#101;&#x64;&#116;&#104;&#x61;&#110;&#108;&#x6f;&#x73;&#x74;&#46;&#110;&#101;&#x74;</a></p>
+<p><a href="&#109;&#97;&#x69;&#x6c;&#x74;&#111;&#x3a;&#x6a;&#97;&#109;&#101;&#x73;&#x40;&#108;&#111;&#118;&#x65;&#x64;&#116;&#x68;&#97;&#110;&#x6c;&#111;&#x73;&#x74;&#46;&#x6e;&#x65;&#x74;" data-bare-link="true">&#106;&#x61;&#x6d;&#x65;&#115;&#64;&#108;&#111;&#118;&#101;&#100;&#116;&#104;&#97;&#110;&#108;&#111;&#115;&#116;&#46;&#x6e;&#101;&#116;</a></p>
 
 <p>Phone: 1-503-734-8571</p>
 
 <p>Address:</p>
 
-<pre><code>     430 SW 13th Street 
-     Apt #1009
-     Portland, OR 97209  
+<pre><code>  Brooklyn, NY, 11201
 </code></pre>
 
 <h2 id="SYNOPSIS">SYNOPSIS</h2>
@@ -97,11 +95,11 @@ an abiding interest in metrics and measurement.</p>
 <h2 id="OPTIONS">OPTIONS</h2>
 
 <dl>
-<dt>--operations</dt><dd><p>Devops, Puppet, Operations Architecture, Service Management, metrics, cultural change</p></dd>
+<dt>--operations</dt><dd><p>DevOps, Puppet, Operations Architecture, Service Management, metrics, cultural change</p></dd>
 <dt>--security</dt><dd><p>Infrastructure, eFraud, Security Operations, Security Education, Risk, Program Management</p></dd>
 <dt class="flush">--ruby</dt><dd><p>MRI, Sinatra, Rbot, Redmine, general hackery</p></dd>
 <dt>--platforms</dt><dd><p>Linux, BSD/OSX, Solaris, AS/400, Cisco, Checkpoint, Windows.</p></dd>
-<dt class="flush">--other</dt><dd><p>Author of five published books, interests in wine, food, books and photography</p></dd>
+<dt class="flush">--other</dt><dd><p>Author of six published books, interests in wine, food, books and photography</p></dd>
 </dl>
 
 
@@ -119,9 +117,11 @@ an abiding interest in metrics and measurement.</p>
 <dl>
 <dt>Puppet Labs (2010 to now):</dt><dd><p></p>
 
-<p>Runs Operations and Professional Services.</p>
+<p>VP</p>
 
-<p>Contact: Luke Kanies, <a href="&#109;&#97;&#x69;&#108;&#116;&#x6f;&#58;&#108;&#x75;&#x6b;&#101;&#64;&#x70;&#117;&#112;&#112;&#101;&#116;&#x6c;&#97;&#98;&#115;&#46;&#99;&#111;&#x6d;" data-bare-link="true">&#108;&#117;&#107;&#101;&#x40;&#112;&#x75;&#112;&#112;&#x65;&#116;&#108;&#x61;&#x62;&#115;&#x2e;&#x63;&#x6f;&#109;</a>
+<p>Runs Business Development and Client Services</p>
+
+<p>Contact: Luke Kanies, <a href="&#109;&#97;&#105;&#108;&#116;&#x6f;&#x3a;&#x6c;&#x75;&#107;&#101;&#x40;&#x70;&#x75;&#x70;&#x70;&#x65;&#x74;&#x6c;&#x61;&#x62;&#x73;&#46;&#99;&#x6f;&#109;" data-bare-link="true">&#108;&#x75;&#x6b;&#101;&#64;&#112;&#117;&#112;&#112;&#101;&#x74;&#x6c;&#97;&#x62;&#x73;&#46;&#99;&#111;&#x6d;</a>
 <a href="http://www.puppetlabs.com" data-bare-link="true">http://www.puppetlabs.com</a></p></dd>
 <dt>National Australia Bank (2006 to 2010):</dt><dd><p></p>
 
@@ -138,13 +138,13 @@ Security Monitoring &amp; Metrics, Investigations, and Security Research.</p>
 
 <h2 id="SEE-ALSO">SEE ALSO</h2>
 
-<p><a href="http://github.com/jamur01">GitHub</a><br />
+<p><a href="http://github.com/jamtur01">GitHub</a><br />
 <a href="http://www.kartar.net">Blog</a></p>
 
 
   <ol class='man-decor man-foot man foot'>
     <li class='tl'></li>
-    <li class='tc'>January 2011</li>
+    <li class='tc'>February 2013</li>
     <li class='tr'>jamtur01(7)</li>
   </ol>
 
