--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 <p>James Turnbull</p>
 
-<p><a href="&#109;&#97;&#x69;&#x6c;&#x74;&#111;&#x3a;&#x6a;&#97;&#109;&#101;&#x73;&#x40;&#108;&#111;&#118;&#x65;&#x64;&#116;&#x68;&#97;&#110;&#x6c;&#111;&#x73;&#x74;&#46;&#x6e;&#x65;&#x74;" data-bare-link="true">&#106;&#x61;&#x6d;&#x65;&#115;&#64;&#108;&#111;&#118;&#101;&#100;&#116;&#104;&#97;&#110;&#108;&#111;&#115;&#116;&#46;&#x6e;&#101;&#116;</a></p>
+<p><a href="&#x6d;&#x61;&#105;&#108;&#116;&#111;&#x3a;&#106;&#97;&#109;&#101;&#x73;&#x40;&#x6c;&#x6f;&#x76;&#101;&#x64;&#116;&#x68;&#97;&#110;&#x6c;&#111;&#x73;&#116;&#x2e;&#x6e;&#x65;&#116;" data-bare-link="true">&#106;&#97;&#x6d;&#101;&#115;&#64;&#108;&#111;&#118;&#101;&#100;&#116;&#x68;&#x61;&#x6e;&#x6c;&#111;&#x73;&#116;&#x2e;&#110;&#x65;&#x74;</a></p>
 
 <p>Phone: 1-503-734-8571</p>
 
@@ -121,7 +121,7 @@ an abiding interest in metrics and measurement.</p>
 
 <p>Runs Business Development and Client Services</p>
 
-<p>Contact: Luke Kanies, <a href="&#109;&#97;&#105;&#108;&#116;&#x6f;&#x3a;&#x6c;&#x75;&#107;&#101;&#x40;&#x70;&#x75;&#x70;&#x70;&#x65;&#x74;&#x6c;&#x61;&#x62;&#x73;&#46;&#99;&#x6f;&#109;" data-bare-link="true">&#108;&#x75;&#x6b;&#101;&#64;&#112;&#117;&#112;&#112;&#101;&#x74;&#x6c;&#97;&#x62;&#x73;&#46;&#99;&#111;&#x6d;</a>
+<p>Contact: Luke Kanies, <a href="&#x6d;&#x61;&#105;&#108;&#116;&#x6f;&#x3a;&#x6c;&#x75;&#x6b;&#101;&#64;&#112;&#117;&#112;&#112;&#101;&#x74;&#108;&#97;&#98;&#x73;&#x2e;&#x63;&#x6f;&#109;" data-bare-link="true">&#108;&#117;&#107;&#x65;&#64;&#112;&#117;&#112;&#112;&#101;&#116;&#x6c;&#x61;&#x62;&#115;&#46;&#x63;&#111;&#109;</a>
 <a href="http://www.puppetlabs.com" data-bare-link="true">http://www.puppetlabs.com</a></p></dd>
 <dt>National Australia Bank (2006 to 2010):</dt><dd><p></p>
 
