--- a/index.html
+++ b/index.html
@@ -73,14 +73,12 @@
 
 <p>James Turnbull</p>
 
-<p><a data-bare-link="true" href="&#109;&#x61;&#105;&#108;&#116;&#111;&#x3a;&#x6a;&#x61;&#x6d;&#101;&#115;&#64;&#x6c;&#111;&#118;&#x65;&#x64;&#x74;&#104;&#97;&#x6e;&#108;&#x6f;&#x73;&#x74;&#46;&#110;&#101;&#x74;">&#106;&#97;&#109;&#101;&#115;&#64;&#108;&#x6f;&#x76;&#101;&#100;&#x74;&#104;&#97;&#110;&#108;&#x6f;&#115;&#x74;&#46;&#110;&#x65;&#x74;</a></p>
+<p><a href="&#x6d;&#x61;&#x69;&#108;&#116;&#111;&#58;&#x6a;&#x61;&#x6d;&#x65;&#x73;&#x40;&#x6c;&#x6f;&#x76;&#x65;&#x64;&#x74;&#104;&#x61;&#x6e;&#108;&#111;&#x73;&#x74;&#46;&#110;&#x65;&#x74;" data-bare-link="true">&#x6a;&#97;&#109;&#x65;&#x73;&#64;&#x6c;&#x6f;&#x76;&#101;&#x64;&#116;&#x68;&#97;&#x6e;&#x6c;&#111;&#115;&#116;&#x2e;&#x6e;&#x65;&#116;</a></p>
 
 <p>Phone: 1-503-734-8571</p>
 
-<p>Address:</p>
-
-<pre><code>  Brooklyn, NY, 11201
-</code></pre>
+<p>Address:
+      Brooklyn, NY, 11201</p>
 
 <h2 id="SYNOPSIS">SYNOPSIS</h2>
 
@@ -115,12 +113,15 @@ an abiding interest in metrics and measurement.</p>
 <h2 id="HISTORY">HISTORY</h2>
 
 <dl>
-<dt>Puppet Labs (2010 to now):</dt><dd><p></p>
+<dt>Docker Inc (2013 to now):</dt><dd><p></p>
+
+<p>VP Services</p></dd>
+<dt>Puppet Labs (2010 to 2013):</dt><dd><p></p>
 
 <p>VP Business Development and Client Services</p>
 
-<p>Contact: Luke Kanies, <a data-bare-link="true" href="&#109;&#97;&#105;&#x6c;&#116;&#111;&#x3a;&#x6c;&#x75;&#x6b;&#x65;&#x40;&#x70;&#117;&#112;&#x70;&#x65;&#116;&#x6c;&#x61;&#98;&#115;&#x2e;&#99;&#x6f;&#x6d;">&#x6c;&#x75;&#107;&#101;&#64;&#112;&#117;&#112;&#112;&#101;&#x74;&#x6c;&#97;&#98;&#x73;&#x2e;&#x63;&#111;&#x6d;</a>
-<a data-bare-link="true" href="http://www.puppetlabs.com">http://www.puppetlabs.com</a></p></dd>
+<p>Contact: Luke Kanies, <a href="&#x6d;&#x61;&#x69;&#x6c;&#116;&#x6f;&#58;&#x6c;&#117;&#x6b;&#x65;&#x40;&#112;&#x75;&#112;&#x70;&#x65;&#116;&#108;&#x61;&#98;&#x73;&#x2e;&#x63;&#x6f;&#x6d;" data-bare-link="true">&#x6c;&#117;&#107;&#101;&#64;&#112;&#117;&#x70;&#x70;&#101;&#116;&#x6c;&#x61;&#98;&#115;&#46;&#99;&#111;&#x6d;</a>
+<a href="http://www.puppetlabs.com" data-bare-link="true">http://www.puppetlabs.com</a></p></dd>
 <dt>National Australia Bank (2006 to 2010):</dt><dd><p></p>
 
 <p>Manager of nabCERT</p>
@@ -128,7 +129,7 @@ an abiding interest in metrics and measurement.</p>
 <p>Managed CERT team including eFraud, Penetration Testing, Vulnerability Management,
 Security Monitoring &amp; Metrics, Investigations, and Security Research.</p>
 
-<p><a data-bare-link="true" href="http://www.nab.com.au">http://www.nab.com.au</a></p></dd>
+<p><a href="http://www.nab.com.au" data-bare-link="true">http://www.nab.com.au</a></p></dd>
 </dl>
 
 
@@ -142,7 +143,7 @@ Security Monitoring &amp; Metrics, Investigations, and Security Research.</p>
 
   <ol class='man-decor man-foot man foot'>
     <li class='tl'></li>
-    <li class='tc'>February 2013</li>
+    <li class='tc'>January 2014</li>
     <li class='tr'>jamtur01(7)</li>
   </ol>
 
