Made some changes to my resume, init

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv='content-type' value='text/html;charset=utf8'>
   <meta name='generator' value='Ronn/v0.7.3 (http://github.com/rtomayko/ronn/tree/0.7.3)'>
-  <title>jamtur01(7) - Operations, Puppet, Security, Ruby, DevOps</title>
+  <title>jamtur01(7) - Engineering, Operations, Security, Ruby, DevOps</title>
   <style type='text/css' media='all'>
   /* style: man */
   body#manpage {margin:0}
@@ -68,12 +68,12 @@
 
   <h2 id="NAME">NAME</h2>
 <p class="man-name">
-  <code>jamtur01</code> - <span class="man-whatis">Operations, Puppet, Security, Ruby, DevOps</span>
+  <code>jamtur01</code> - <span class="man-whatis">Engineering, Operations, Security, Ruby, DevOps</span>
 </p>
 
 <p>James Turnbull</p>
 
-<p><a href="&#x6d;&#x61;&#x69;&#108;&#116;&#111;&#58;&#x6a;&#x61;&#x6d;&#x65;&#x73;&#x40;&#x6c;&#x6f;&#x76;&#x65;&#x64;&#x74;&#104;&#x61;&#x6e;&#108;&#111;&#x73;&#x74;&#46;&#110;&#x65;&#x74;" data-bare-link="true">&#x6a;&#97;&#109;&#x65;&#x73;&#64;&#x6c;&#x6f;&#x76;&#101;&#x64;&#116;&#x68;&#97;&#x6e;&#x6c;&#111;&#115;&#116;&#x2e;&#x6e;&#x65;&#116;</a></p>
+<p><a href="&#109;&#97;&#105;&#x6c;&#116;&#x6f;&#x3a;&#106;&#x61;&#x6d;&#x65;&#x73;&#64;&#108;&#x6f;&#x76;&#x65;&#100;&#116;&#x68;&#97;&#x6e;&#108;&#111;&#115;&#x74;&#46;&#110;&#101;&#x74;" data-bare-link="true">&#106;&#97;&#109;&#101;&#x73;&#64;&#108;&#111;&#118;&#x65;&#x64;&#116;&#x68;&#97;&#110;&#108;&#x6f;&#x73;&#x74;&#46;&#110;&#x65;&#x74;</a></p>
 
 <p>Phone: 1-503-734-8571</p>
 
@@ -82,23 +82,30 @@
 
 <h2 id="SYNOPSIS">SYNOPSIS</h2>
 
-<p>James is an experienced Operations and Security professional with over twenty years
+<p>James is an experienced Engineer, Operations and Security professional with over twenty years
 of experience in startups, banking &amp; finance, pharmaceutical, telecommunications
 and outsourcing.</p>
 
-<p>He has managed operations and security teams, worked as an architect on large scale
-infrastructure projects ($20M+), developed a number of open source projects and has
+<p>He has managed engineering, operations and security teams, worked as an architect on large scale
+infrastructure projects, developed a number of open source projects and has
 an abiding interest in metrics and measurement.</p>
 
 <h2 id="OPTIONS">OPTIONS</h2>
 
-<dl>
-<dt>--operations</dt><dd><p>DevOps, Puppet, Operations Architecture, Service Management, metrics, cultural change</p></dd>
-<dt>--security</dt><dd><p>Infrastructure, eFraud, Security Operations, Security Education, Risk, Program Management</p></dd>
-<dt class="flush">--ruby</dt><dd><p>MRI, Sinatra, Rbot, Redmine, general hackery</p></dd>
-<dt>--platforms</dt><dd><p>Linux, BSD/OSX, Solaris, AS/400, Cisco, Checkpoint, Windows.</p></dd>
-<dt class="flush">--other</dt><dd><p>Author of six published books, interests in wine, food, books and photography</p></dd>
-</dl>
+<ul>
+<li><p>--engineering
+Leadership, Agile, Architecture, and hiring.</p></li>
+<li><p>--operations:
+DevOps, Docker, Puppet, Operations Architecture, Service Management, metrics, cultural change</p></li>
+<li><p>--security:
+Infrastructure, eFraud, Security Operations, Security Education, Risk, Program Management</p></li>
+<li><p>--ruby:
+MRI, Sinatra, Rails, general hackery</p></li>
+<li><p>--platforms:
+Linux, BSD/OSX, Solaris, AS/400, Cisco, Checkpoint, Windows.</p></li>
+<li><p>--other:
+Author of seven published books, interests in wine, food, books and photography</p></li>
+</ul>
 
 
 <h2 id="STANDARDS">STANDARDS</h2>
@@ -113,14 +120,26 @@ an abiding interest in metrics and measurement.</p>
 <h2 id="HISTORY">HISTORY</h2>
 
 <dl>
-<dt>Docker Inc (2013 to now):</dt><dd><p></p>
+<dt>Kickstarter (2014 to now):</dt><dd><p></p>
 
-<p>VP Services</p></dd>
+<p>VP of Engineering</p>
+
+<p><a href="http://www.kickstarter.com" data-bare-link="true">http://www.kickstarter.com</a></p></dd>
+<dt>Docker Inc (2013 to 2014):</dt><dd><p></p>
+
+<p>VP Services</p>
+
+<p><a href="http://www.docker.com" data-bare-link="true">http://www.docker.com</a></p></dd>
+<dt>Venmo (2013 to 2013) - acquired by PayPal:</dt><dd><p></p>
+
+<p>VP of Engineering</p>
+
+<p><a href="http://www.venmo.com" data-bare-link="true">http://www.venmo.com</a></p></dd>
 <dt>Puppet Labs (2010 to 2013):</dt><dd><p></p>
 
 <p>VP Business Development and Client Services</p>
 
-<p>Contact: Luke Kanies, <a href="&#x6d;&#x61;&#x69;&#x6c;&#116;&#x6f;&#58;&#x6c;&#117;&#x6b;&#x65;&#x40;&#112;&#x75;&#112;&#x70;&#x65;&#116;&#108;&#x61;&#98;&#x73;&#x2e;&#x63;&#x6f;&#x6d;" data-bare-link="true">&#x6c;&#117;&#107;&#101;&#64;&#112;&#117;&#x70;&#x70;&#101;&#116;&#x6c;&#x61;&#98;&#115;&#46;&#99;&#111;&#x6d;</a>
+<p>Contact: Luke Kanies, <a href="&#109;&#x61;&#x69;&#x6c;&#x74;&#x6f;&#x3a;&#x6c;&#x75;&#x6b;&#x65;&#64;&#112;&#x75;&#112;&#112;&#x65;&#x74;&#108;&#x61;&#98;&#115;&#x2e;&#x63;&#x6f;&#109;" data-bare-link="true">&#108;&#x75;&#x6b;&#x65;&#64;&#x70;&#117;&#112;&#x70;&#101;&#x74;&#108;&#x61;&#x62;&#115;&#46;&#x63;&#111;&#x6d;</a>
 <a href="http://www.puppetlabs.com" data-bare-link="true">http://www.puppetlabs.com</a></p></dd>
 <dt>National Australia Bank (2006 to 2010):</dt><dd><p></p>
 
@@ -138,12 +157,14 @@ Security Monitoring &amp; Metrics, Investigations, and Security Research.</p>
 <h2 id="SEE-ALSO">SEE ALSO</h2>
 
 <p><a href="http://github.com/jamtur01">GitHub</a><br />
-<a href="http://www.kartar.net">Blog</a></p>
+<a href="http://www.kartar.net">Blog</a><br />
+<a href="http://twitter.com/kartar">Twitter</a>
+<a href="http://www.jamesturnbull.net">Books</a></p>
 
 
   <ol class='man-decor man-foot man foot'>
     <li class='tl'></li>
-    <li class='tc'>January 2014</li>
+    <li class='tc'>December 2014</li>
     <li class='tr'>jamtur01(7)</li>
   </ol>
 
