Made some changes to my resume, init

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 <p>James Turnbull</p>
 
-<p><a href="&#109;&#97;&#105;&#x6c;&#116;&#x6f;&#x3a;&#106;&#x61;&#x6d;&#x65;&#x73;&#64;&#108;&#x6f;&#x76;&#x65;&#100;&#116;&#x68;&#97;&#x6e;&#108;&#111;&#115;&#x74;&#46;&#110;&#101;&#x74;" data-bare-link="true">&#106;&#97;&#109;&#101;&#x73;&#64;&#108;&#111;&#118;&#x65;&#x64;&#116;&#x68;&#97;&#110;&#108;&#x6f;&#x73;&#x74;&#46;&#110;&#x65;&#x74;</a></p>
+<p><a href="&#x6d;&#x61;&#x69;&#108;&#116;&#x6f;&#x3a;&#106;&#x61;&#x6d;&#x65;&#x73;&#64;&#108;&#111;&#x76;&#101;&#100;&#x74;&#x68;&#x61;&#x6e;&#108;&#x6f;&#x73;&#116;&#46;&#110;&#x65;&#116;" data-bare-link="true">&#x6a;&#97;&#x6d;&#101;&#x73;&#x40;&#x6c;&#111;&#118;&#101;&#x64;&#x74;&#x68;&#x61;&#x6e;&#108;&#111;&#x73;&#116;&#46;&#x6e;&#x65;&#x74;</a></p>
 
 <p>Phone: 1-503-734-8571</p>
 
@@ -139,7 +139,7 @@ Author of seven published books, interests in wine, food, books and photography<
 
 <p>VP Business Development and Client Services</p>
 
-<p>Contact: Luke Kanies, <a href="&#109;&#x61;&#x69;&#x6c;&#x74;&#x6f;&#x3a;&#x6c;&#x75;&#x6b;&#x65;&#64;&#112;&#x75;&#112;&#112;&#x65;&#x74;&#108;&#x61;&#98;&#115;&#x2e;&#x63;&#x6f;&#109;" data-bare-link="true">&#108;&#x75;&#x6b;&#x65;&#64;&#x70;&#117;&#112;&#x70;&#101;&#x74;&#108;&#x61;&#x62;&#115;&#46;&#x63;&#111;&#x6d;</a>
+<p>Contact: Luke Kanies, <a href="&#x6d;&#97;&#105;&#108;&#116;&#x6f;&#x3a;&#108;&#117;&#107;&#101;&#64;&#x70;&#x75;&#112;&#x70;&#x65;&#116;&#108;&#97;&#98;&#115;&#46;&#99;&#111;&#x6d;" data-bare-link="true">&#108;&#117;&#107;&#101;&#x40;&#112;&#117;&#112;&#112;&#x65;&#x74;&#x6c;&#x61;&#x62;&#x73;&#x2e;&#x63;&#111;&#x6d;</a>
 <a href="http://www.puppetlabs.com" data-bare-link="true">http://www.puppetlabs.com</a></p></dd>
 <dt>National Australia Bank (2006 to 2010):</dt><dd><p></p>
 
