Made some changes to my resume, init

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 <p>James Turnbull</p>
 
-<p><a href="&#x6d;&#x61;&#x69;&#108;&#116;&#x6f;&#x3a;&#106;&#x61;&#x6d;&#x65;&#x73;&#64;&#108;&#111;&#x76;&#101;&#100;&#x74;&#x68;&#x61;&#x6e;&#108;&#x6f;&#x73;&#116;&#46;&#110;&#x65;&#116;" data-bare-link="true">&#x6a;&#97;&#x6d;&#101;&#x73;&#x40;&#x6c;&#111;&#118;&#101;&#x64;&#x74;&#x68;&#x61;&#x6e;&#108;&#111;&#x73;&#116;&#46;&#x6e;&#x65;&#x74;</a></p>
+<p><a href="&#x6d;&#x61;&#x69;&#108;&#x74;&#111;&#58;&#x6a;&#x61;&#x6d;&#101;&#x73;&#x40;&#x6c;&#x6f;&#118;&#101;&#x64;&#x74;&#104;&#x61;&#x6e;&#x6c;&#111;&#115;&#116;&#46;&#x6e;&#x65;&#116;" data-bare-link="true">&#106;&#97;&#109;&#x65;&#115;&#x40;&#x6c;&#111;&#118;&#101;&#x64;&#x74;&#x68;&#97;&#110;&#x6c;&#111;&#115;&#116;&#x2e;&#110;&#101;&#116;</a></p>
 
 <p>Phone: 1-503-734-8571</p>
 
@@ -92,20 +92,14 @@ an abiding interest in metrics and measurement.</p>
 
 <h2 id="OPTIONS">OPTIONS</h2>
 
-<ul>
-<li><p>--engineering
-Leadership, Agile, Architecture, and hiring.</p></li>
-<li><p>--operations:
-DevOps, Docker, Puppet, Operations Architecture, Service Management, metrics, cultural change</p></li>
-<li><p>--security:
-Infrastructure, eFraud, Security Operations, Security Education, Risk, Program Management</p></li>
-<li><p>--ruby:
-MRI, Sinatra, Rails, general hackery</p></li>
-<li><p>--platforms:
-Linux, BSD/OSX, Solaris, AS/400, Cisco, Checkpoint, Windows.</p></li>
-<li><p>--other:
-Author of seven published books, interests in wine, food, books and photography</p></li>
-</ul>
+<dl>
+<dt>--engineering</dt><dd><p>Leadership, Agile, Architecture, and hiring.</p></dd>
+<dt>--operations</dt><dd><p>DevOps, Docker, Puppet, Operations Architecture, Service Management, metrics, cultural change</p></dd>
+<dt>--security</dt><dd><p>Infrastructure, eFraud, Security Operations, Security Education, Risk, Program Management</p></dd>
+<dt class="flush">--ruby</dt><dd><p>MRI, Sinatra, Rails, general hackery</p></dd>
+<dt>--platforms</dt><dd><p>Linux, BSD/OSX, Solaris, AS/400, Cisco, Checkpoint, Windows.</p></dd>
+<dt class="flush">--other</dt><dd><p>Author of seven published books, interests in wine, food, books and photography</p></dd>
+</dl>
 
 
 <h2 id="STANDARDS">STANDARDS</h2>
@@ -139,7 +133,7 @@ Author of seven published books, interests in wine, food, books and photography<
 
 <p>VP Business Development and Client Services</p>
 
-<p>Contact: Luke Kanies, <a href="&#x6d;&#97;&#105;&#108;&#116;&#x6f;&#x3a;&#108;&#117;&#107;&#101;&#64;&#x70;&#x75;&#112;&#x70;&#x65;&#116;&#108;&#97;&#98;&#115;&#46;&#99;&#111;&#x6d;" data-bare-link="true">&#108;&#117;&#107;&#101;&#x40;&#112;&#117;&#112;&#112;&#x65;&#x74;&#x6c;&#x61;&#x62;&#x73;&#x2e;&#x63;&#111;&#x6d;</a>
+<p>Contact: Luke Kanies, <a href="&#x6d;&#97;&#x69;&#108;&#116;&#111;&#x3a;&#108;&#x75;&#x6b;&#101;&#64;&#x70;&#x75;&#112;&#x70;&#101;&#116;&#108;&#x61;&#98;&#115;&#x2e;&#x63;&#111;&#x6d;" data-bare-link="true">&#x6c;&#117;&#107;&#x65;&#64;&#x70;&#x75;&#x70;&#x70;&#x65;&#116;&#108;&#97;&#x62;&#x73;&#46;&#x63;&#111;&#109;</a>
 <a href="http://www.puppetlabs.com" data-bare-link="true">http://www.puppetlabs.com</a></p></dd>
 <dt>National Australia Bank (2006 to 2010):</dt><dd><p></p>
 
