--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 <p>James Turnbull</p>
 
-<p><a href="&#x6d;&#x61;&#x69;&#108;&#x74;&#111;&#58;&#x6a;&#x61;&#x6d;&#101;&#x73;&#x40;&#x6c;&#x6f;&#118;&#101;&#x64;&#x74;&#104;&#x61;&#x6e;&#x6c;&#111;&#115;&#116;&#46;&#x6e;&#x65;&#116;" data-bare-link="true">&#106;&#97;&#109;&#x65;&#115;&#x40;&#x6c;&#111;&#118;&#101;&#x64;&#x74;&#x68;&#97;&#110;&#x6c;&#111;&#115;&#116;&#x2e;&#110;&#101;&#116;</a></p>
+<p><a href="&#x6d;&#x61;&#x69;&#108;&#116;&#111;&#58;&#x6a;&#97;&#x6d;&#101;&#x73;&#x40;&#x6c;&#111;&#x76;&#x65;&#x64;&#x74;&#104;&#x61;&#110;&#108;&#x6f;&#x73;&#116;&#46;&#x6e;&#x65;&#116;" data-bare-link="true">&#x6a;&#x61;&#x6d;&#101;&#x73;&#64;&#108;&#x6f;&#x76;&#101;&#100;&#116;&#x68;&#97;&#x6e;&#x6c;&#x6f;&#x73;&#116;&#46;&#x6e;&#101;&#116;</a></p>
 
 <p>Phone: 1-503-734-8571</p>
 
@@ -133,8 +133,7 @@ an abiding interest in metrics and measurement.</p>
 
 <p>VP Business Development and Client Services</p>
 
-<p>Contact: Luke Kanies, <a href="&#x6d;&#97;&#x69;&#108;&#116;&#111;&#x3a;&#108;&#x75;&#x6b;&#101;&#64;&#x70;&#x75;&#112;&#x70;&#101;&#116;&#108;&#x61;&#98;&#115;&#x2e;&#x63;&#111;&#x6d;" data-bare-link="true">&#x6c;&#117;&#107;&#x65;&#64;&#x70;&#x75;&#x70;&#x70;&#x65;&#116;&#108;&#97;&#x62;&#x73;&#46;&#x63;&#111;&#109;</a>
-<a href="http://www.puppetlabs.com" data-bare-link="true">http://www.puppetlabs.com</a></p></dd>
+<p><a href="http://www.puppetlabs.com" data-bare-link="true">http://www.puppetlabs.com</a></p></dd>
 <dt>National Australia Bank (2006 to 2010):</dt><dd><p></p>
 
 <p>Manager of nabCERT</p>
@@ -152,7 +151,7 @@ Security Monitoring &amp; Metrics, Investigations, and Security Research.</p>
 
 <p><a href="http://github.com/jamtur01">GitHub</a><br />
 <a href="http://www.kartar.net">Blog</a><br />
-<a href="http://twitter.com/kartar">Twitter</a>
+<a href="http://twitter.com/kartar">Twitter</a><br />
 <a href="http://www.jamesturnbull.net">Books</a></p>
 
 
