Made some changes to my resume, init

--- a/index.html
+++ b/index.html
@@ -73,12 +73,14 @@
 
 <p>James Turnbull</p>
 
-<p><a href="&#x6d;&#x61;&#x69;&#108;&#116;&#111;&#58;&#x6a;&#97;&#x6d;&#101;&#x73;&#x40;&#x6c;&#111;&#x76;&#x65;&#x64;&#x74;&#104;&#x61;&#110;&#108;&#x6f;&#x73;&#116;&#46;&#x6e;&#x65;&#116;" data-bare-link="true">&#x6a;&#x61;&#x6d;&#101;&#x73;&#64;&#108;&#x6f;&#x76;&#101;&#100;&#116;&#x68;&#97;&#x6e;&#x6c;&#x6f;&#x73;&#116;&#46;&#x6e;&#101;&#116;</a></p>
+<p><a href="&#x6d;&#x61;&#105;&#108;&#x74;&#111;&#x3a;&#106;&#x61;&#x6d;&#x65;&#115;&#64;&#108;&#111;&#x76;&#x65;&#100;&#116;&#104;&#x61;&#110;&#108;&#111;&#115;&#x74;&#x2e;&#x6e;&#x65;&#x74;" data-bare-link="true">&#x6a;&#97;&#x6d;&#x65;&#115;&#64;&#x6c;&#x6f;&#x76;&#x65;&#100;&#116;&#x68;&#97;&#110;&#108;&#x6f;&#x73;&#116;&#x2e;&#110;&#x65;&#x74;</a></p>
 
 <p>Phone: 1-503-734-8571</p>
 
-<p>Address:
-      Brooklyn, NY, 11201</p>
+<p>Address:</p>
+
+<pre><code>  Brooklyn, NY, 11201
+</code></pre>
 
 <h2 id="SYNOPSIS">SYNOPSIS</h2>
 
@@ -116,7 +118,7 @@ an abiding interest in metrics and measurement.</p>
 <dl>
 <dt>Kickstarter (2014 to now):</dt><dd><p></p>
 
-<p>VP of Engineering</p>
+<p>CTO</p>
 
 <p><a href="http://www.kickstarter.com" data-bare-link="true">http://www.kickstarter.com</a></p></dd>
 <dt>Docker Inc (2013 to 2014):</dt><dd><p></p>
@@ -157,7 +159,7 @@ Security Monitoring &amp; Metrics, Investigations, and Security Research.</p>
 
   <ol class='man-decor man-foot man foot'>
     <li class='tl'></li>
-    <li class='tc'>December 2014</li>
+    <li class='tc'>November 2015</li>
     <li class='tr'>jamtur01(7)</li>
   </ol>
 
