--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv='content-type' value='text/html;charset=utf8'>
   <meta name='generator' value='Ronn/v0.7.3 (http://github.com/rtomayko/ronn/tree/0.7.3)'>
-  <title>jamtur01(7) - Engineering, Operations, Security, Ruby, DevOps</title>
+  <title>jamtur01(7) - Leadership, Engineering, Operations, Security, DevOps</title>
   <style type='text/css' media='all'>
   /* style: man */
   body#manpage {margin:0}
@@ -68,12 +68,12 @@
 
   <h2 id="NAME">NAME</h2>
 <p class="man-name">
-  <code>jamtur01</code> - <span class="man-whatis">Engineering, Operations, Security, Ruby, DevOps</span>
+  <code>jamtur01</code> - <span class="man-whatis">Leadership, Engineering, Operations, Security, DevOps</span>
 </p>
 
 <p>James Turnbull</p>
 
-<p><a href="&#x6d;&#x61;&#105;&#108;&#x74;&#111;&#x3a;&#106;&#x61;&#x6d;&#x65;&#115;&#64;&#108;&#111;&#x76;&#x65;&#100;&#116;&#104;&#x61;&#110;&#108;&#111;&#115;&#x74;&#x2e;&#x6e;&#x65;&#x74;" data-bare-link="true">&#x6a;&#97;&#x6d;&#x65;&#115;&#64;&#x6c;&#x6f;&#x76;&#x65;&#100;&#116;&#x68;&#97;&#110;&#108;&#x6f;&#x73;&#116;&#x2e;&#110;&#x65;&#x74;</a></p>
+<p><a href="&#109;&#x61;&#x69;&#108;&#x74;&#x6f;&#58;&#106;&#x61;&#109;&#x65;&#115;&#x40;&#x6c;&#x6f;&#x76;&#x65;&#x64;&#x74;&#x68;&#x61;&#110;&#x6c;&#111;&#x73;&#x74;&#x2e;&#110;&#x65;&#x74;" data-bare-link="true">&#x6a;&#x61;&#109;&#101;&#x73;&#64;&#x6c;&#x6f;&#118;&#x65;&#100;&#x74;&#x68;&#x61;&#110;&#x6c;&#111;&#x73;&#116;&#x2e;&#110;&#x65;&#x74;</a></p>
 
 <p>Phone: 1-503-734-8571</p>
 
@@ -116,7 +116,7 @@ an abiding interest in metrics and measurement.</p>
 <h2 id="HISTORY">HISTORY</h2>
 
 <dl>
-<dt>Kickstarter (2014 to now):</dt><dd><p></p>
+<dt>Kickstarter (2014 to 2016):</dt><dd><p></p>
 
 <p>CTO</p>
 
@@ -159,7 +159,7 @@ Security Monitoring &amp; Metrics, Investigations, and Security Research.</p>
 
   <ol class='man-decor man-foot man foot'>
     <li class='tl'></li>
-    <li class='tc'>November 2015</li>
+    <li class='tc'>November 2016</li>
     <li class='tr'>jamtur01(7)</li>
   </ol>
 
