--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv='content-type' value='text/html;charset=utf8'>
   <meta name='generator' value='Ronn/v0.7.3 (http://github.com/rtomayko/ronn/tree/0.7.3)'>
-  <title>jamtur01(7) - Leadership, Engineering, Operations, Security, DevOps</title>
+  <title>jamtur01(7) - Leadership, Engineering, Operations, Security, and Startups.</title>
   <style type='text/css' media='all'>
   /* style: man */
   body#manpage {margin:0}
@@ -68,75 +68,73 @@
 
   <h2 id="NAME">NAME</h2>
 <p class="man-name">
-  <code>jamtur01</code> - <span class="man-whatis">Leadership, Engineering, Operations, Security, DevOps</span>
+  <code>jamtur01</code> - <span class="man-whatis">Leadership, Engineering, Operations, Security, and Startups.</span>
 </p>
 
 <p>James Turnbull</p>
 
-<p><a href="&#109;&#x61;&#x69;&#108;&#x74;&#x6f;&#58;&#106;&#x61;&#109;&#x65;&#115;&#x40;&#x6c;&#x6f;&#x76;&#x65;&#x64;&#x74;&#x68;&#x61;&#110;&#x6c;&#111;&#x73;&#x74;&#x2e;&#110;&#x65;&#x74;" data-bare-link="true">&#x6a;&#x61;&#109;&#101;&#x73;&#64;&#x6c;&#x6f;&#118;&#x65;&#100;&#x74;&#x68;&#x61;&#110;&#x6c;&#111;&#x73;&#116;&#x2e;&#110;&#x65;&#x74;</a></p>
+<p><a href="&#109;&#x61;&#105;&#x6c;&#116;&#x6f;&#58;&#x6a;&#x61;&#x6d;&#x65;&#115;&#64;&#x6c;&#x6f;&#x76;&#x65;&#100;&#x74;&#x68;&#x61;&#x6e;&#108;&#111;&#x73;&#x74;&#x2e;&#110;&#101;&#116;" data-bare-link="true">&#106;&#97;&#x6d;&#101;&#115;&#x40;&#x6c;&#111;&#118;&#101;&#x64;&#x74;&#x68;&#x61;&#110;&#108;&#x6f;&#x73;&#116;&#46;&#x6e;&#x65;&#116;</a></p>
 
-<p>Phone: 1-503-734-8571</p>
-
-<p>Address:</p>
-
-<pre><code>  Brooklyn, NY, 11201
-</code></pre>
+<p>Location:
+      Brooklyn, NY</p>
 
 <h2 id="SYNOPSIS">SYNOPSIS</h2>
 
-<p>James is an experienced Engineer, Operations and Security professional with over twenty years
+<p>James is an experienced engineer, author, operations and security professional with over twenty years
 of experience in startups, banking &amp; finance, pharmaceutical, telecommunications
 and outsourcing.</p>
 
-<p>He has managed engineering, operations and security teams, worked as an architect on large scale
-infrastructure projects, developed a number of open source projects and has
-an abiding interest in metrics and measurement.</p>
+<p>He has managed and grown engineering, operations and security teams, worked as an architect on large scale
+infrastructure projects, developed open source projects and communities, written a number of technology books, and has an abiding interest in metrics and measurement.</p>
 
 <h2 id="OPTIONS">OPTIONS</h2>
 
 <dl>
-<dt>--engineering</dt><dd><p>Leadership, Agile, Architecture, and hiring.</p></dd>
-<dt>--operations</dt><dd><p>DevOps, Docker, Puppet, Operations Architecture, Service Management, metrics, cultural change</p></dd>
+<dt>--engineering</dt><dd><p>Leadership, Agile, Architecture, and hiring</p></dd>
+<dt>--operations</dt><dd><p>Monitoring, SRE, DevOps, Docker, Puppet, Operations Architecture, Service Management, metrics, cultural change</p></dd>
 <dt>--security</dt><dd><p>Infrastructure, eFraud, Security Operations, Security Education, Risk, Program Management</p></dd>
-<dt class="flush">--ruby</dt><dd><p>MRI, Sinatra, Rails, general hackery</p></dd>
-<dt>--platforms</dt><dd><p>Linux, BSD/OSX, Solaris, AS/400, Cisco, Checkpoint, Windows.</p></dd>
-<dt class="flush">--other</dt><dd><p>Author of seven published books, interests in wine, food, books and photography</p></dd>
+<dt class="flush">--other</dt><dd><p>Author of eleven published books, interests in wine, food, books and photography</p></dd>
 </dl>
 
 
 <h2 id="STANDARDS">STANDARDS</h2>
 
 <dl>
-<dt>Leadership &amp; Management</dt><dd><p>Lead small and large teams including technical and operational leadership roles</p></dd>
+<dt>Leadership &amp; Management</dt><dd><p>Lead small and large teams including engineering, technical, and operational leadership roles</p></dd>
 <dt>Communication</dt><dd><p>Excellent written and verbal communication skills.</p></dd>
-<dt>Business Development</dt><dd><p>Good track record of growing teams, sales, service levels, products and organisations.</p></dd>
+<dt>Startups and Business Development</dt><dd><p>Good track record of building go-to-market strategy, business models, growing teams, sales, service levels, products and organizations.</p></dd>
 </dl>
 
 
 <h2 id="HISTORY">HISTORY</h2>
 
 <dl>
-<dt>Kickstarter (2014 to 2016):</dt><dd><p></p>
+<dt>Empatico:</dt><dd><p></p>
+
+<p>Founding CTO</p>
+
+<p><a href="http://www.empatico.org" data-bare-link="true">http://www.empatico.org</a></p></dd>
+<dt>Kickstarter:</dt><dd><p></p>
 
 <p>CTO</p>
 
 <p><a href="http://www.kickstarter.com" data-bare-link="true">http://www.kickstarter.com</a></p></dd>
-<dt>Docker Inc (2013 to 2014):</dt><dd><p></p>
+<dt>Docker Inc:</dt><dd><p></p>
 
 <p>VP Services</p>
 
 <p><a href="http://www.docker.com" data-bare-link="true">http://www.docker.com</a></p></dd>
-<dt>Venmo (2013 to 2013) - acquired by PayPal:</dt><dd><p></p>
+<dt class="flush">Venmo:</dt><dd><p></p>
 
 <p>VP of Engineering</p>
 
 <p><a href="http://www.venmo.com" data-bare-link="true">http://www.venmo.com</a></p></dd>
-<dt>Puppet Labs (2010 to 2013):</dt><dd><p></p>
+<dt class="flush">Puppet:</dt><dd><p></p>
 
-<p>VP Business Development and Client Services</p>
+<p>VP Technical Operations, Business Development and Client Services</p>
 
-<p><a href="http://www.puppetlabs.com" data-bare-link="true">http://www.puppetlabs.com</a></p></dd>
-<dt>National Australia Bank (2006 to 2010):</dt><dd><p></p>
+<p><a href="http://www.puppet.com" data-bare-link="true">http://www.puppet.com</a></p></dd>
+<dt>National Australia Bank:</dt><dd><p></p>
 
 <p>Manager of nabCERT</p>
 
@@ -147,19 +145,19 @@ Security Monitoring &amp; Metrics, Investigations, and Security Research.</p>
 </dl>
 
 
-<p><em>Further references available upon request</em></p>
+<p><em>References available upon request</em></p>
 
 <h2 id="SEE-ALSO">SEE ALSO</h2>
 
-<p><a href="http://github.com/jamtur01">GitHub</a><br />
-<a href="http://www.kartar.net">Blog</a><br />
-<a href="http://twitter.com/kartar">Twitter</a><br />
-<a href="http://www.jamesturnbull.net">Books</a></p>
+<p><a href="https://github.com/jamtur01">GitHub</a><br />
+<a href="https://www.kartar.net">Blog</a><br />
+<a href="https://twitter.com/kartar">Twitter</a><br />
+<a href="https://turnbull.press">Books</a></p>
 
 
   <ol class='man-decor man-foot man foot'>
     <li class='tl'></li>
-    <li class='tc'>November 2016</li>
+    <li class='tc'>August 2018</li>
     <li class='tr'>jamtur01(7)</li>
   </ol>
 
