Made some changes to my resume, init

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 <p>James Turnbull</p>
 
-<p><a href="&#109;&#x61;&#105;&#x6c;&#116;&#x6f;&#58;&#x6a;&#x61;&#x6d;&#x65;&#115;&#64;&#x6c;&#x6f;&#x76;&#x65;&#100;&#x74;&#x68;&#x61;&#x6e;&#108;&#111;&#x73;&#x74;&#x2e;&#110;&#101;&#116;" data-bare-link="true">&#106;&#97;&#x6d;&#101;&#115;&#x40;&#x6c;&#111;&#118;&#101;&#x64;&#x74;&#x68;&#x61;&#110;&#108;&#x6f;&#x73;&#116;&#46;&#x6e;&#x65;&#116;</a></p>
+<p><a href="&#109;&#97;&#105;&#108;&#116;&#x6f;&#58;&#x6a;&#97;&#109;&#x65;&#115;&#64;&#x6c;&#x6f;&#x76;&#101;&#x64;&#116;&#x68;&#x61;&#110;&#108;&#x6f;&#x73;&#116;&#46;&#x6e;&#101;&#116;" data-bare-link="true">&#106;&#97;&#109;&#101;&#115;&#x40;&#108;&#111;&#118;&#101;&#100;&#x74;&#104;&#97;&#x6e;&#108;&#x6f;&#x73;&#x74;&#x2e;&#x6e;&#101;&#116;</a></p>
 
 <p>Location:
       Brooklyn, NY</p>
@@ -108,41 +108,59 @@ infrastructure projects, developed open source projects and communities, written
 
 <h2 id="HISTORY">HISTORY</h2>
 
-<dl>
-<dt>Empatico:</dt><dd><p></p>
+<ul>
+<li><p>Sotheby's</p>
 
-<p>Founding CTO</p>
+<p>SVP of Engineering</p>
 
-<p><a href="http://www.empatico.org" data-bare-link="true">http://www.empatico.org</a></p></dd>
-<dt>Kickstarter:</dt><dd><p></p>
-
-<p>CTO</p>
-
-<p><a href="http://www.kickstarter.com" data-bare-link="true">http://www.kickstarter.com</a></p></dd>
-<dt>Docker Inc:</dt><dd><p></p>
-
-<p>VP Services</p>
-
-<p><a href="http://www.docker.com" data-bare-link="true">http://www.docker.com</a></p></dd>
-<dt class="flush">Venmo:</dt><dd><p></p>
+<p><a href="https://www.sothebys.com" data-bare-link="true">https://www.sothebys.com</a></p></li>
+<li><p>Timber</p>
 
 <p>VP of Engineering</p>
 
-<p><a href="http://www.venmo.com" data-bare-link="true">http://www.venmo.com</a></p></dd>
-<dt class="flush">Puppet:</dt><dd><p></p>
+<p><a href="https://timber.io" data-bare-link="true">https://timber.io</a></p></li>
+<li><p>Glitch</p>
+
+<p>VP of Engineering</p>
+
+<p><a href="https://www.glitch.com" data-bare-link="true">https://www.glitch.com</a></p></li>
+<li><p>Microsoft</p>
+
+<p>CTO-in-residence</p></li>
+<li><p>Empatico:</p>
+
+<p>Founding CTO</p>
+
+<p><a href="http://www.empatico.org" data-bare-link="true">http://www.empatico.org</a></p></li>
+<li><p>Kickstarter:</p>
+
+<p>CTO</p>
+
+<p><a href="http://www.kickstarter.com" data-bare-link="true">http://www.kickstarter.com</a></p></li>
+<li><p>Docker Inc:</p>
+
+<p>VP Services</p>
+
+<p><a href="http://www.docker.com" data-bare-link="true">http://www.docker.com</a></p></li>
+<li><p>Venmo:</p>
+
+<p>VP of Engineering</p>
+
+<p><a href="http://www.venmo.com" data-bare-link="true">http://www.venmo.com</a></p></li>
+<li><p>Puppet:</p>
 
 <p>VP Technical Operations, Business Development and Client Services</p>
 
-<p><a href="http://www.puppet.com" data-bare-link="true">http://www.puppet.com</a></p></dd>
-<dt>National Australia Bank:</dt><dd><p></p>
+<p><a href="http://www.puppet.com" data-bare-link="true">http://www.puppet.com</a></p></li>
+<li><p>National Australia Bank:</p>
 
 <p>Manager of nabCERT</p>
 
 <p>Managed CERT team including eFraud, Penetration Testing, Vulnerability Management,
 Security Monitoring &amp; Metrics, Investigations, and Security Research.</p>
 
-<p><a href="http://www.nab.com.au" data-bare-link="true">http://www.nab.com.au</a></p></dd>
-</dl>
+<p><a href="http://www.nab.com.au" data-bare-link="true">http://www.nab.com.au</a></p></li>
+</ul>
 
 
 <p><em>References available upon request</em></p>
@@ -152,12 +170,13 @@ Security Monitoring &amp; Metrics, Investigations, and Security Research.</p>
 <p><a href="https://github.com/jamtur01">GitHub</a><br />
 <a href="https://www.kartar.net">Blog</a><br />
 <a href="https://twitter.com/kartar">Twitter</a><br />
+<a href="https://mastodon.online/@kartar">Mastodon</a>
 <a href="https://turnbull.press">Books</a></p>
 
 
   <ol class='man-decor man-foot man foot'>
     <li class='tl'></li>
-    <li class='tc'>August 2018</li>
+    <li class='tc'>November 2022</li>
     <li class='tr'>jamtur01(7)</li>
   </ol>
 
